add: metadata, features images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,54 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fun-ui.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>FunUI</title>
+    <meta
+      name="description"
+      content="FunUI — Advanced Table, Multi-Theme Charts and Robust Forms"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fun-ui.p-gokul.dev/" />
+    <meta property="og:title" content="FunUI" />
+    <meta
+      property="og:description"
+      content="FunUI — Advanced Table, Multi-Theme Charts and Robust Forms"
+    />
+    <!-- main OG image -->
+    <meta property="og:image" content="https://fun-ui.p-gokul.dev/fun-ui.svg" />
+    <!-- extra preview image for table.png -->
+    <meta property="og:image" content="https://fun-ui.p-gokul.dev/table.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://fun-ui.p-gokul.dev/" />
+    <meta property="twitter:title" content="FunUI" />
+    <meta
+      property="twitter:description"
+      content="FunUI — Advanced Table, Multi-Theme Charts and Robust Forms"
+    />
+    <!-- main Twitter image -->
+    <meta
+      property="twitter:image"
+      content="https://fun-ui.p-gokul.dev/fun-ui.svg"
+    />
+    <!-- extra Twitter image for table.png -->
+    <meta
+      property="twitter:image"
+      content="https://fun-ui.p-gokul.dev/table.png"
+    />
+
+    <!-- Optional: Theme Color -->
+    <meta name="theme-color" content="#4f46e5" />
+
+    <!-- Optional: Keywords & Author -->
+    <meta
+      name="keywords"
+      content="FunUI, UI components, React, Tailwind CSS, Gokul"
+    />
+    <meta name="author" content="P. Gokul" />
   </head>
   <body>
     <div id="root"></div>
